# gameEngine

./: .gitignore  CMakeLists-bp.txt  CMakeLists.txt  GameEngine.sln  README.md  build.sh
GameEngine/: GameEngine.vcxproj  helloWorld.cpp  main.cpp
GameEngine/Debug/: vc141.idb
GameEngine/Debug/GameEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GameEngine.lastbuildstate
GameEngine/x64/Debug/: vc141.idb
GameEngine/x64/Debug/GameEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GameEngine.lastbuildstate  GameEngine.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PE/: CMakeLists.txt
PE/image/: Image.h
PE/math/: Math.h
PE/render/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.h
PE/shaders/: Shader.h
PE/view/: GLFWCallback.cpp  View.cpp  View.h
assimp/x86/: assimp-vc141-mt.lib
courses/001/: CMakeLists.txt  main.cpp  shader.vs
courses/001_init_render_pipeline/: CMakeLists.txt  main.cpp
courses/001_init_render_pipeline/core/application/: Application.h
courses/001_init_render_pipeline/core/renderWindow/: GLRenderWindow.cpp
courses/001_init_render_pipeline/renderpipeline/: README.md
courses/001_init_render_pipeline/renderpipeline/shaders/: Shader.cpp
courses/001_init_render_pipeline/resources/: shader.vs
courses/002/: CMakeLists.txt  main.cpp  shader.vs
courses/003/: CMakeLists.txt  main.cpp  shader.fs
courses/003/shaders/: Shader.h
courses/003/view/: View.cpp  View.h
courses/004_camera/: CMakeLists.txt  main.cpp  shader.vs
courses/004_camera/renderer/: Texture.h
courses/004_camera/view/: GLFWCallback.cpp  View.cpp  View.h
courses/005_color/: CMakeLists.txt  main.cpp  shader.fs  shader.vs
courses/005_color/view/: Camera.h  View.cpp  View.h
courses/006_basicLighting/: 0.fs  CMakeLists.txt  main.cpp  shader.fs  shader.vs  shader2.vs  shader_lighting.vs
courses/007_material/: CMakeLists.txt  main.cpp  shader.fs  shader_lighting.fs  shader_lighting.vs
courses/007_material/shaders/: Shader.cpp
courses/007_material/view/: View.cpp
courses/008_reflect/: CMakeLists.txt  main.cpp  shader.fs  shader.vs
courses/008_reflect/renderer/: Texture.cpp  Texture.h
courses/008_reflect/view/: View.h
eglLibs/x86/: libGLES_CM.lib  libGLESv2.lib
glad/vcpkg/updates/: 0000000001  0000000004  0000000005  0000000008  0000000010
glad/x64-windows/lib/: glad.lib
glad/x64-windows/share/vcpkg-cmake-config/: vcpkg_abi_info.txt
glew-2.1.0/include/GL/: glew.h
glew-2.1.0/lib/Release/x64/: glew32.lib  glew32s.lib
glfw-3.3.bin.WIN64/lib-vc2017/: content.txt
include/: cbFunctions.cpp  main.cpp  sdlMain.cpp
include/courses/: cbFunctions.cpp  eglTestMain.cpp
include/courses/001/: main.cpp  shader.fs
include/image/: Image.h
include/learnopengl/: camera.h  mesh.h  model.h  shader_m.h
include/math/: Math.cpp  Math.h
include/render/: Texture.cpp  Texture.h
include/shaders/: Shader.cpp  Shader.h
notes/: texture.md
x64/Debug/: GameEngine.ilk
